[UPDATE] Fix video redirection on mobile and video thumbnails

--- a/frontend/src/components/videoslider/VideoTestimonials.css
+++ b/frontend/src/components/videoslider/VideoTestimonials.css
@@ -5,7 +5,7 @@
     height: 100%;
   }
   
-  .video-testimonials__mobile-thumbnail {
+  .video-testimonials__thumbnail {
     width: 100%;
     height: 100%;
     background-size: cover;
